[project]
name = "mm-chart-view"
version = "0.1.0"
description = "A Streamlit chatbot that views and analyzes MacroMicro financial charts using Gemini API with Google Search grounding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.30.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]
